Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35177

QFtp does not handle dates used by some Windows FTP servers

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Some future release
    • 5.1.1
    • Network: FTP
    • None
    • Qt 5.1.1 with qtftp module from git.
    • a2a7f28c0facd7ca946cea54e98c6019fcdb16ae

      The qtftp module is not correctly parsing dates returned from a Windows ftp server, causing no files to be reported in the server. The date format has four digit years and the parsing code expects a two digit year. The attached patch fixed it for me but has not been tested for regressions on other servers.

      (I realize that the qtftp module is deprecated.)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tranter Jeff Tranter
            tranter Jeff Tranter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes